[tool.poetry]
name = "rental-compare"           # краще не називати проєкт "py"
version = "0.1.0"
description = "…"
readme = "README.md"
requires-python = ">=3.10"

# Ось цей блок важливий:
packages = [
  { include = "rental_compare", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.100.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
# …інші залежності
